implement sample home page (WIP)

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <div>
+    <div class="flex flex-col h-screen dark:bg-neutral-800">
         {% block content %}
         {% endblock %}
     </div>
@@ -26,4 +26,5 @@
     src="{% static 'tw-elements/dist/js/tw-elements.umd.min.js' %}"
     type="text/javascript"></script>
 </body>
+
 </html>
